--- a/Captura.ipynb
+++ b/Captura.ipynb
@@ -48,7 +48,7 @@
     "#INSIRA O CAMINHO DO SEU WEBDRIVER NO LUHAR DE \"INSIRA AQUI O CAMINHO DO SEU WEBDRIVER\" -> \n",
     "#O SCRIPT FOI DESENVOLVIDO PARA GOOGLE CHROME, NÃO SEI SE FUNCIONA PARA DEMAIS NAVEGADORES\n",
     "\n",
-    "driver = webdriver.Chrome(\"INSIRA AQUI O WEBDRIVER DO SEU BROWSWER\")\n",
+    "driver = webdriver.Chrome(\"INSIRA AQUI O WEBDRIVER\")\n",
     "site = \"http://www.ssp.sp.gov.br/transparenciassp/Consulta.aspx\"\n",
     "driver.get(site)\n",
     "driver.maximize_window()\n"
